deployment/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: oc-backend
  ports:
   - port: 8080
     targetPort: 8080
