deployment/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: oc-frontend
  ports:
    - port: 4200
      targetPort: 80
