deployment/pgsql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: pgsql-database
  ports:
    - port: 5432
      targetPort: 5432
