deployment/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oc-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 4200
          - path: /backend/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip
                port:
                  number: 8080
